test/error/double_backtick.sv
// pattern: Parse error: unexpected token '`'
module top;
    ``
endmodule
